--- a/template.html
+++ b/template.html
@@ -1,3 +1,12 @@
+
+
+<head>
+      <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet" type='text/css'>
+<style type="text/css">
+      *{font-family: "Do Hyeon", cursive;}
+</style>
+</head>
+
 <div style="width:800px; height:600px; padding:20px; text-align:center; border: 10px solid #787878">
 <div style="width:750px; height:550px; padding:20px; text-align:center; border: 5px solid #787878">
        <span style="font-size:50px; font-weight:bold">한국어 되냐?</span>
