--- a/template.html
+++ b/template.html
@@ -1,9 +1,18 @@
 
 
+
+
 <head>
       <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet" type='text/css'>
-<style type="text/css">
-      *{font-family: "Do Hyeon", cursive;}
+
+<style>
+      @font-face {
+            font-family: 'malgun';
+            src: url('malgun.ttf') format('truetype');
+      }
+      div {
+            font-family: 'malgun';
+      }
 </style>
 </head>
 
